# statement_converter

./: .gitignore  dev.sh  plan.md
backend/: README.md  pyproject.toml
backend/app/: config.py  filters.py  main.py  security.py
backend/app/api/: routes.py  schemas.py
backend/app/csv_adapters/: base.py  canara_savings.py  generic.py
backend/app/normalize/: amount.py  date.py  description.py
backend/app/output/: csv_writer.py  download_cache.py
backend/app/parsers/: base.py  detector.py  text_extractor.py
backend/app/parsers/banks/: hdfc_creditcard.py  hdfc_savings.py  hdfc_savings_v2.py  kotak_creditcard.py  kotak_savings.py  kotak_savings_v2.py
backend/app/pipeline/: errors.py  fallback.py  ingest.py  models.py  orchestrator.py
backend/app/static/: app.js  index.html  styles.css
backend/tests/: test_canara_csv.py  test_csv_generic.py  test_fallback.py  test_normalize.py  test_pdf_detector.py  test_pdf_parsers.py
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.js  vite.config.ts
frontend/src/: App.tsx  main.tsx  styles.css  types.ts
frontend/src/api/: client.ts
frontend/src/components/: FileDropzone.tsx  StatementPreview.tsx
