[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "statement-converter"
version = "0.1.0"
description = "Bank statement PDF/CSV to normalized CSV converter"
requires-python = ">=3.11"
dependencies = [
    "dateparser>=1.2.0,<2",
    "fastapi>=0.115,<1",
    "pydantic>=2.8,<3",
    "pydantic-settings>=2.3,<3",
    "python-multipart>=0.0.9,<1",
    "uvicorn>=0.30,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2,<9",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
